# scripts

./: bun.lockb  deploy.js  extract_logs.sh  extract_logs_2.sh  index.js  init.js  package-lock.json  package.json  spam.js
assets/: bot_abi.js  game_abi.js  gridy.sierra.json  gridy_BotContract.compiled_contract_class.json  gridy_BotContract.contract_class.json  gridy_GameContract.compiled_contract_class.json  gridy_GameContract.contract_class.json
contract/: index.js  package.json
db-scripts/: .gitignore  Cargo.toml  config.template.toml
db-scripts/src/: config.rs  main.rs  models.rs  utils.rs
utils/: encode.py
