[package]
name = "db-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1"
toml = "0.8.19"
reqwest = "0.12.9"
serde_json = "1.0.134" # Used in the Map Data into Structs section
rand = "0.8"


